link to sample-1 updated and title changed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/sample-1/sample-1.html" target="_blank">Sample 1</a>
+    <a href="./sample-1/sample-1.html" target="_blank">Sample 1</a>
 </body>
 </html>
