--- a/sample-1/sample-1.html
+++ b/sample-1/sample-1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sample 1</title>
+    <title>Sample 1 Dream Home</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">  -->
     <link rel="stylesheet" href="./style.css" type="text/css">
