--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Web Playground - Rajib Chisim</title>
 </head>
 <body>
     <a href="./sample-1/sample-1.html" target="_blank">Sample 1</a>
