Fix sample-3 | button pointer, button and input focus outline styled

--- a/sample-3/sample-3.html
+++ b/sample-3/sample-3.html
@@ -113,9 +113,9 @@
     <section class="newsletter-wrapper">
         <div class="wrapper-content newsletter">
             <h1>Sign up for our newsletter!</h1>
-            <form class="form-newsletter">
-                <input type="text" placeholder="Enter a valid email address">
-                <img src="./images/Group 1.png" alt="">
+            <form action="#!" class="form-newsletter">
+                <input type="email" placeholder="Enter a valid email address">
+                <button type="submit"><img src="./images/Group 1.png" alt=""></button>
             </form>
         </div>
     </section>
