Index file modified to show all available projects

--- a/index.html
+++ b/index.html
@@ -2,11 +2,112 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet">    
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Web Playground - Rajib Chisim</title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <a href="./sample-1/sample-1.html" target="_blank">Sample 1</a>
+    <div class="container">
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4 text-center">Web Playground</h1>
+              <p class="lead text-center">Welcome. This site is showcasing web development work that made with a lots of love and care.</p>
+            </div>
+        </div>
+
+        <section class="projects">
+            <div class="row project">
+                <div class="col-md-6">
+                    <h5 class="mb-4"><a href="./sample-1/sample-1.html" target="_blank">My Dream Home</a></h5>
+                    <h6>Details:</h6>
+                    <p>Responsive, Modern, Simple and Minimal front page for an Real Estate agency.</p>
+                    <h6>Language/Framework/Library:</h6>
+                    <p>HTML, CSS, Bootstrap</p>
+                </div>
+                <div class="col-md-6">
+                    <a href="./sample-1/sample-1.html" target="_blank">
+                        <img src="./images/thumb-sample-1.JPG" alt="thumb-sample-1" class="img-fluid">
+                    </a>
+                </div>
+            </div>
+            <div class="row mt-5 project">
+                <div class="col-md-6">
+                    <h5 class="mb-4"><a href="./sample-1/sample-1.html" target="_blank">Tiny One</a></h5>
+                    <h6>Details:</h6>
+                    <p>Product/Service Landing site for showcasing important features. Carousel Slider </p>
+                    <h6>Language/Framework/Library:</h6>
+                    <p>HTML, CSS, Bootstrap</p>
+                </div>
+                <div class="col-md-6">
+                    <a href="./sample-1/sample-1.html" target="_blank">
+                        <img src="./images/thumb-tiny-one.JPG" alt="thumb-sample-1" class="img-fluid">
+                    </a>
+                </div>
+            </div>
+            <div class="row mt-5 project">
+                <div class="col-md-6">
+                    <h5 class="mb-4"><a href="./education/index-bs.html" target="_blank">Little Giraf</a></h5>
+                    <h6>Details:</h6>
+                    <p>Landing page for children education. </p>
+                    <h6>Language/Framework/Library:</h6>
+                    <p>HTML, CSS, Bootstrap</p>
+                </div>
+                <div class="col-md-6">
+                    <a href="./education/index-bs.html" target="_blank">
+                        <img src="./images/thumb-little-jiraf.JPG" alt="thumb-little-jiraf" class="img-fluid">
+                    </a>
+                </div>
+            </div>
+            <div class="row mt-5 project">
+                <div class="col-md-6">
+                    <h5 class="mb-4"><a href="./sample-3/sample-3.html" target="_blank">Minimo</a></h5>
+                    <h6>Details:</h6>
+                    <p>An awesome, black and white themed landing page</p>
+                    <h6>Language/Framework/Library:</h6>
+                    <p>HTML, CSS, Bootstrap</p>
+                </div>
+                <div class="col-md-6">
+                    <a href="./sample-3/sample-3.html" target="_blank">
+                        <img src="./images/thumb-minimo.JPG" alt="thumb-minimo" class="img-fluid">
+                    </a>
+                </div>
+            </div>
+            <div class="row mt-5 project">
+                <div class="col-md-6">
+                    <h5 class="mb-4"><a href="./sample-2/sample-2.html" target="_blank">Ocean Edge Blue</a></h5>
+                    <h6>Details:</h6>
+                    <p>An awesome, black and white themed landing page</p>
+                    <h6>Language/Framework/Library:</h6>
+                    <p>HTML, CSS, Bootstrap</p>
+                </div>
+                <div class="col-md-6">
+                    <a href="./sample-2/sample-2.html" target="_blank">
+                        <img src="./images/thumb-ocean-edge.JPG" alt="thumb-ocean-edge" class="img-fluid">
+                    </a>
+                </div>
+            </div>
+            <div class="row mt-5 project">
+                <div class="col-md-6">
+                    <h5 class="mb-4"><a href="./escape/index.html" target="_blank">Escape Landing Page</a></h5>
+                    <h6>Details:</h6>
+                    <p>Landing page for an Company</p>
+                    <h6>Language/Framework/Library:</h6>
+                    <p>HTML, CSS, Bootstrap</p>
+                </div>
+                <div class="col-md-6">
+                    <a href="./escape/index.html" target="_blank">
+                        <img src="./images/thumb-escape.JPG" alt="thumb-escape" class="img-fluid">
+                    </a>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
