Education(Jirraf) added, Broken link fixed in index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+        .projects {
+            margin-bottom: 64px;
+        }
+        .project h5 a {
+            color: darkgray;
+        }
+        .project-thumbnail {
+            border: 1px solid lightgray;
+        }
+        
+    </style>
 </head>
 <body>
     <div class="container">
@@ -32,23 +44,27 @@
                     <p>HTML, CSS, Bootstrap</p>
                 </div>
                 <div class="col-md-6">
-                    <a href="./sample-1/sample-1.html" target="_blank">
-                        <img src="./images/thumb-sample-1.JPG" alt="thumb-sample-1" class="img-fluid">
-                    </a>
+                    <div class="project-thumbnail">
+                        <a href="./sample-1/sample-1.html" target="_blank">
+                            <img src="./images/thumb-sample-1.JPG" alt="thumb-sample-1" class="img-fluid">
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="row mt-5 project">
                 <div class="col-md-6">
-                    <h5 class="mb-4"><a href="./sample-1/sample-1.html" target="_blank">Tiny One</a></h5>
+                    <h5 class="mb-4"><a href="./tiny-one/index.html" target="_blank">Tiny One</a></h5>
                     <h6>Details:</h6>
                     <p>Product/Service Landing site for showcasing important features. Carousel Slider </p>
                     <h6>Language/Framework/Library:</h6>
                     <p>HTML, CSS, Bootstrap</p>
                 </div>
                 <div class="col-md-6">
-                    <a href="./sample-1/sample-1.html" target="_blank">
-                        <img src="./images/thumb-tiny-one.JPG" alt="thumb-sample-1" class="img-fluid">
-                    </a>
+                    <div class="project-thumbnail">
+                        <a href="./tiny-one/index.html" target="_blank">
+                            <img src="./images/thumb-tiny-one.JPG" alt="thumb-sample-1" class="img-fluid">
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="row mt-5 project">
@@ -60,9 +76,11 @@
                     <p>HTML, CSS, Bootstrap</p>
                 </div>
                 <div class="col-md-6">
-                    <a href="./education/index-bs.html" target="_blank">
-                        <img src="./images/thumb-little-jiraf.JPG" alt="thumb-little-jiraf" class="img-fluid">
-                    </a>
+                    <div class="project-thumbnail">
+                        <a href="./education/index-bs.html" target="_blank">
+                            <img src="./images/thumb-little-jiraf.JPG" alt="thumb-little-jiraf" class="img-fluid">
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="row mt-5 project">
@@ -74,9 +92,11 @@
                     <p>HTML, CSS, Bootstrap</p>
                 </div>
                 <div class="col-md-6">
-                    <a href="./sample-3/sample-3.html" target="_blank">
-                        <img src="./images/thumb-minimo.JPG" alt="thumb-minimo" class="img-fluid">
-                    </a>
+                    <div class="project-thumbnail">
+                        <a href="./sample-3/sample-3.html" target="_blank">
+                            <img src="./images/thumb-minimo.JPG" alt="thumb-minimo" class="img-fluid">
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="row mt-5 project">
@@ -88,9 +108,11 @@
                     <p>HTML, CSS, Bootstrap</p>
                 </div>
                 <div class="col-md-6">
-                    <a href="./sample-2/sample-2.html" target="_blank">
-                        <img src="./images/thumb-ocean-edge.JPG" alt="thumb-ocean-edge" class="img-fluid">
-                    </a>
+                    <div class="project-thumbnail">
+                        <a href="./sample-2/sample-2.html" target="_blank">
+                            <img src="./images/thumb-ocean-edge.JPG" alt="thumb-ocean-edge" class="img-fluid">
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="row mt-5 project">
@@ -102,9 +124,11 @@
                     <p>HTML, CSS, Bootstrap</p>
                 </div>
                 <div class="col-md-6">
-                    <a href="./escape/index.html" target="_blank">
-                        <img src="./images/thumb-escape.JPG" alt="thumb-escape" class="img-fluid">
-                    </a>
+                    <div class="project-thumbnail">
+                        <a href="./escape/index.html" target="_blank">
+                            <img src="./images/thumb-escape.JPG" alt="thumb-escape" class="img-fluid">
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
