--- a/tiny-one/index.html
+++ b/tiny-one/index.html
@@ -33,10 +33,10 @@
                 <div class="collapse navbar-collapse top-links" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Feature <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#feature">Feature <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Support</a>
+                            <a class="nav-link" href="#support">Support</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Blog</a>
@@ -131,7 +131,7 @@
 
 
     <!-- Features section -->
-    <div class="">
+    <div id="feature">
         <div class="container content-area features">
             <div class="pb-4">
                 <h1 class="text-center section-title">Tinyone features</h1>
@@ -237,7 +237,7 @@
         <!-- Features section END-->
 
         <!-- Footer section -->
-        <div class="bg-dark">
+        <div class="bg-dark" id="support">
             <div class="container content-area">
                 <!-- Newsletter -->
                 <div class="newsletter">
