Sample-1 responsive revised

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section class="projects">
             <div class="row project">
                 <div class="col-md-6">
-                    <h5 class="mb-4"><a href="./sample-1/sample-1.html" target="_blank">My Dream Home</a></h5>
+                    <h5 class="mb-4"><a href="./sample-1/sample-1-bs.html" target="_blank">My Dream Home</a></h5>
                     <h6>Details:</h6>
                     <p>Responsive, Modern, Simple and Minimal front page for an Real Estate agency.</p>
                     <h6>Language/Framework/Library:</h6>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="project-thumbnail">
-                        <a href="./sample-1/sample-1.html" target="_blank">
+                        <a href="./sample-1/sample-1-bs.html" target="_blank">
                             <img src="./images/thumb-sample-1.JPG" alt="thumb-sample-1" class="img-fluid">
                         </a>
                     </div>
