--- a/sample-1/sample-1-bs.html
+++ b/sample-1/sample-1-bs.html
@@ -22,7 +22,7 @@
             <header>
                 <nav class="navbar navbar-expand-lg navbar-light bg-white">
                     <a class="navbar-brand" href="#">
-                        <img src="./images/dream.jpg" alt="logo" class="d-inline-block align-top">
+                        <img src="./images/dream.jpg" alt="logo" class="d-inline-block align-top logo">
                         <h1>My Dream Home</h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
